# asfw

./: CMakeLists.txt  LICENSE  README.md
lib/: .gitignore  CMakeLists.txt  README.md
lib/include/: cratio.hpp  delegate.hpp  peripheral.hpp  peripheral_types.hpp  rational.hpp  read_span.hpp  types.hpp
lib/include/async/: and_then.hpp  bind.hpp  bind_back.hpp  bracket.hpp  concat.hpp  conditional.hpp  defer.hpp  delay.hpp  do_effect.hpp  emit.hpp  event.hpp  every.hpp  execute_sync.hpp  filter.hpp  filter_signals.hpp  finally.hpp  fold.hpp  future.hpp  inline_scheduler.hpp  inplace_stop_token.hpp  just.hpp  lift_operator.hpp  make_future.hpp  make_source_sender.hpp  make_stream.hpp  make_transforming_sender.hpp  map.hpp  null_receiver.hpp  on.hpp  on_signal.hpp  operation.hpp  outcome.hpp  pollable.hpp  receive.hpp  receiver.hpp  receiver_traits.hpp  repeat.hpp  scheduler.hpp  sender.hpp  sequence.hpp  (+12 more)
lib/include/async/util/: make_transforming_sender.hpp
lib/include/board/: board.hpp  clock_config.hpp  interrupts.hpp  peripherals.hpp
lib/include/board/clock/: config.hpp  make.hpp
lib/include/board/pinout/: adc.hpp
lib/include/board/regmap/: adc.hpp  c_adc.hpp  dma.hpp  exti.hpp  flash.hpp  fpu_cpacr.hpp  gpio.hpp  i2c.hpp  nvic.hpp  rcc.hpp  spi.hpp  stk.hpp  syscfg.hpp  uart.hpp  usart.hpp
lib/include/cont/: box.hpp  box_union.hpp  circular_queue.hpp  result.hpp
lib/include/drivers/: adc.hpp  cs43l22.hpp  dma.hpp  gpio.hpp  i2s.hpp  spi.hpp  uart.hpp  vl6180.hpp
lib/include/drivers/adc/: adc.hpp  adc_error.hpp  make.hpp
lib/include/drivers/cs43l22/: regmap.hpp
lib/include/drivers/dma/: address.hpp  dma.hpp  dma_concepts.hpp  dma_error.hpp  dma_like.hpp  dma_signal.hpp  double_buffered_dma.hpp  make.hpp  single_shot_dma.hpp
lib/include/drivers/gpio/: config.hpp  input_interrupt_pin.hpp  input_pin.hpp  make.hpp  output_pin.hpp
lib/include/drivers/i2c/: i2c_error.hpp  i2c_like.hpp  i2c_master.hpp  i2c_memory.hpp  make.hpp
lib/include/drivers/i2s/: i2s.hpp  (+2 more)
lib/include/opt/: option.hpp  option_set.hpp
lib/include/platform/: i2c.hpp
lib/include/reg/: README.md  apply.hpp  bit_is_set.hpp  bitmask.hpp  clear.hpp  combine.hpp  field.hpp  field_action.hpp  field_location.hpp  field_manipulation.hpp  multi_field.hpp  peripheral_operations.hpp  read.hpp  register_value.hpp  set.hpp  toggle.hpp  unchecked_read.hpp  unchecked_write.hpp  write.hpp
lib/include/schedulers/: cooperative_scheduler.hpp
lib/include/tmp/: lift.hpp  parameter_packs.hpp  tag_invoke.hpp  traits.hpp  type_list.hpp
lib/test/: CMakeLists.txt  test_delegate.cpp  test_rational.cpp
lib/test/async/: test_and_then.cpp  test_bind_back.cpp  test_conditional.cpp  test_emit.cpp  test_event.cpp  test_finally.cpp  test_inline_scheduler.cpp  test_inplace_stop_token.cpp  test_just.cpp  test_map.cpp  test_outcome.cpp  test_pollable.cpp  test_sequence.cpp  test_then.cpp  test_transform.cpp  test_unstoppable_token.cpp  test_use_state.cpp  test_when_all.cpp  test_when_any.cpp
lib/test/board/: test_clock_config.cpp
lib/test/cont/: test_box.cpp  test_box_union.cpp
lib/test/drivers/: test_adc.cpp  test_cs43l22.cpp  test_dma.cpp  test_gpio.cpp  test_i2c.cpp  test_i2c_memory.cpp  test_i2s.cpp  test_spi.cpp  test_uart.cpp
lib/test/mocks/: memory.hpp  mock_board.hpp  mock_i2c.hpp  mock_interrupts_old.hpp  mock_peripheral.hpp
lib/test/reg/: test_clear.cpp  test_combine.cpp  test_peripheral_operations.cpp  test_set.cpp  test_toggle.cpp  test_write.cpp
lib/test/schedulers/: test_cooperative_scheduler.cpp
lib/test/tmp/: test_type_list.cpp
(+59 files in other folders)
